# unidrop

./: Cargo.toml
client/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
client/android/app/: build.gradle.kts
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/kotlin/cc/hater/unidrop/: MainActivity.kt
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: main.dart  router.dart
client/lib/models/: device.dart  transfer.dart
client/lib/providers/: device_provider.dart  engine_provider.dart
client/lib/screens/: home_screen.dart  settings_screen.dart  transfer_screen.dart
client/lib/services/: localsend_service.dart
client/lib/src/rust/: api.dart  api.freezed.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  init.dart
client/lib/widgets/: device_card.dart
client/linux/: CMakeLists.txt
client/linux/runner/: my_application.cc
client/macos/Runner/: DebugProfile.entitlements  Release.entitlements
client/macos/Runner.xcodeproj/: project.pbxproj
client/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
client/macos/Runner/Configs/: AppInfo.xcconfig
client/test/: widget_test.dart
client/windows/: CMakeLists.txt
client/windows/runner/: Runner.rc  main.cpp
crates/unidrop-cli/: Cargo.toml
crates/unidrop-cli/src/: main.rs
crates/unidrop-core/: Cargo.toml
crates/unidrop-core/src/: device.rs  error.rs  event.rs  lib.rs  protocol.rs  transfer.rs
crates/unidrop-daemon/: Cargo.toml
crates/unidrop-daemon/src/: main.rs
crates/unidrop-engine/: Cargo.toml
crates/unidrop-engine/src/: engine.rs  lib.rs  registry.rs  router.rs
crates/unidrop-ffi/: Cargo.toml
crates/unidrop-ffi/src/: api.rs  frb_generated.rs  lib.rs
crates/unidrop-protocol-localsend/: Cargo.toml
crates/unidrop-protocol-localsend/src/: cert.rs  client.rs  discovery.rs  lib.rs  models.rs  multicast.rs  protocol.rs  quic.rs  server.rs
crates/unidrop-protocol-p2p/: Cargo.toml
crates/unidrop-protocol-p2p/examples/: file_transfer_test.rs  p2p_test.rs
crates/unidrop-protocol-p2p/src/: behaviour.rs  lib.rs  protocol.rs  transfer.rs
crates/unidrop-relay/: Cargo.toml
crates/unidrop-relay/src/: main.rs
