[workspace]
resolver = "2"
members = [
    "crates/unidrop-core",
    "crates/unidrop-protocol-localsend",
    "crates/unidrop-engine",
    "crates/unidrop-daemon",
    "crates/unidrop-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["UniDrop Contributors"]
repository = "https://github.com/example/unidrop"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# Networking
axum = { version = "0.7", features = ["multipart"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# mDNS
mdns-sd = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TLS/Crypto
rcgen = "0.13"
sha2 = "0.10"
hex = "0.4"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
bytes = "1"
dirs = "5"
hostname = "0.4"
parking_lot = "0.12"

# Internal crates
unidrop-core = { path = "crates/unidrop-core" }
unidrop-engine = { path = "crates/unidrop-engine" }
unidrop-protocol-localsend = { path = "crates/unidrop-protocol-localsend" }
