[workspace]
resolver = "2"
members = [
    "crates/unidrop-core",
    "crates/unidrop-protocol-localsend",
    "crates/unidrop-protocol-p2p",
    "crates/unidrop-engine",
    "crates/unidrop-daemon",
    "crates/unidrop-cli",
    "crates/unidrop-relay",
    "crates/unidrop-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["UniDrop Contributors"]
repository = "https://github.com/example/unidrop"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# Networking
axum = { version = "0.7", features = ["multipart"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# mDNS
mdns-sd = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TLS/Crypto
rcgen = "0.13"
sha2 = "0.10"
hex = "0.4"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"

# QUIC
quinn = "0.11"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
bytes = "1"
dirs = "5"
hostname = "0.4"
parking_lot = "0.12"

# Internal crates
unidrop-core = { path = "crates/unidrop-core" }
unidrop-engine = { path = "crates/unidrop-engine" }
unidrop-protocol-localsend = { path = "crates/unidrop-protocol-localsend" }
unidrop-protocol-p2p = { path = "crates/unidrop-protocol-p2p" }

# libp2p
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "quic",
    "relay",
    "dcutr",
    "identify",
    "ping",
    "noise",
    "yamux",
    "macros",
    "request-response",
    "cbor",
] }

# FFI
flutter_rust_bridge = "=2.7.0"
lazy_static = "1.5"
async-stream = "0.3"
