[package]
name = "unidrop-cli"
description = "UniDrop command-line interface"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "drop"
path = "src/main.rs"

[dependencies]
unidrop-core.workspace = true
unidrop-engine.workspace = true
unidrop-protocol-localsend.workspace = true
unidrop-protocol-p2p.workspace = true

tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
hostname.workspace = true
